issue-3396283: H1 alignment fix

--- a/web/themes/custom/provus_bootstrap/scss/admin/_layout_builder.scss
+++ b/web/themes/custom/provus_bootstrap/scss/admin/_layout_builder.scss
@@ -265,7 +265,7 @@ a > .layout-builder__link-wrapped {
 
 .layout-builder-active {
 
-  h1.title {
+  .region-title h1.title {
     display: none;
   }
 
